# influenceme-saas

./: .gitignore
.github/workflows/: refresh_viral_videos.yml
backend/: auth.py  database.py  email_service.py  main.py  models.py  pyproject.toml  pytest.ini  requirements.txt  schemas.py  setup.py
backend/alembic/: env.py
backend/alembic/versions/: 82ae1291398a_initial_schema.py  cc4589f91ae9_add_proof_screenshot_fulfilled_at_.py
backend/api/: index.py  requirements.txt
backend/routers/: __init__.py  admin.py  dashboard.py  genai.py  influencer.py  influencers.py  marketplace.py  payments.py  social.py
backend/scripts/: refresh_viral_videos.py
backend/tests/: conftest.py  test_auth.py  test_edge_cases.py  test_genai.py  test_influencer.py  test_marketplace.py  test_verification.py
backend/tests/e2e/: conftest.py  helpers.py  test_auth_flow.py  test_fan_flow.py  test_influencer_flow.py  test_public.py
frontend/: jest.config.ts  next.config.ts  package-lock.json  package.json
frontend/src/: auth.ts
frontend/src/__tests__/: ErrorBoundary.test.tsx  Footer.test.tsx  InfluencerCard.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/browse/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/fan/requests/: page.tsx
frontend/src/app/influencer/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ErrorBoundary.tsx  Footer.tsx  GenAIStudio.tsx  InfluencerCard.tsx  Navbar.tsx  PhoneDemo.tsx
scripts/: seed.py
(+5 files in other folders)
