[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "influencer_saas_backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "sqlalchemy==2.0.41",
    "psycopg2-binary==2.9.9",
    "PyJWT==2.8.0",
    "bcrypt==4.2.1",
    "python-multipart==0.0.9",
    "python-dotenv==1.0.1",
    "pydantic[email]==2.8.0",
    "stripe==10.12.0",
    "httpx==0.27.0",
]
